--- a/index.html
+++ b/index.html
@@ -38,14 +38,41 @@
                     <div id="buttons" class="justify-content-center row row-cols-2 row-cols-md-4">
                         <button class="btn btn-mb col" id="musicbrainz" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:musicbrainz" style="color: #ffffff; font-size: 24px;"></span> MusicBrainz</button>
                         <button class="btn btn-sptf col" id="spotify" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:spotify" style="color: #ffffff; font-size: 24px;"></span> Spotify</button>
-                        <button class="btn btn-dz col" id="deezer"><span class="iconify" data-inline="false" data-icon="simple-icons:deezer" style="color: #ffffff; font-size: 24px;"></span> Deezer</button>
+                        <button class="btn btn-dz col" id="deezer" data-bs-toggle="tooltip" data-bs-html="true" title="<em>Pour l'exemple, l'affichage des résultats de recherche est fixé au groupe AC/DC</em>"><span class="iconify" data-inline="false" data-icon="simple-icons:deezer" style="color: #ffffff; font-size: 24px;"></span> Deezer</button>
                         <button class="btn btn-ti col" id="tunein" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:tunein" style="color: #1c203c; font-size: 24px;"></span> TuneIn</button>
                     </div>
                 </div>
             </form>
         </div>
 
-        <div id="resultRecherche"></div>
+        <!-- RESULTATS DE RECHERCHE -->
+        <div id="resultRecherche">
+            
+            <!-- PAR ARTISTE -->
+            <div id="artistes">
+                <div class=" d-flex justify-content-center align-items-center">
+                    <h3 class="underline text-end">Résultats de votre recherche pour :</h3> 
+                    <div class="d-flex flex-wrap justify-content-center align-items-center">
+                        <span class="rechNom">AC/DC</span> 
+                        <span class="badge badgeRechArtiste">artiste/groupe</span>
+                    </div>
+                </div>
+                <div id="resultRechercheArtiste" class="row row-cols-2 row-cols-md-4 row-cols-lg-6"></div>
+            </div>
+
+            <!-- PAR TITRE -->
+            <div id="titres">
+                <div class=" d-flex justify-content-center align-items-center">
+                    <h3 class="underline text-end">Résultats de votre recherche pour :</h3> 
+                    <div class="d-flex flex-wrap justify-content-center align-items-center">
+                        <span class="rechNom">Christmas</span> 
+                        <span class="badge badgeRechTitre">titre</span>
+                    </div>
+                </div>
+                <div id="resultRechercheTitre" class="row row-cols-2 row-cols-md-4 row-cols-lg-6"></div>
+                <audio src="https://cdns-preview-9.dzcdn.net/stream/c-9b9fb519f95049a44d247ce37450edb9-6.mp3"></audio>
+            </div>
+        </div>
 
         <!-- RECHERCHES RECENTES -->
         <h2 class="bandeauTitreH2 p-2">Mes recherches récentes</h2>
@@ -197,5 +224,6 @@
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="assets/app.js"></script>
+    <script src="assets/search.js"></script>
 </body>
 </html>
