--- a/myartists.html
+++ b/myartists.html
@@ -175,7 +175,7 @@
     <!-- FOOTER AVEC LIENS -->
     <footer class="p-2">
         <ul>
-            <li><a href="#">A propos</a></li>
+            <li><a href="#">Qui sommes-nous</a></li>
             <li><a href="#">Liens</a></li>
             <li><a href="#">Partenaires</a></li>
             <li><a href="#">Support</a></li>
