--- a/myartists.html
+++ b/myartists.html
@@ -29,6 +29,7 @@
             <div class="blocArtisteBio col">
                 <img class="img-fluid rounded" src="img/zik/bio/vianney.jpg" alt="Vianney">
                 <a href="http://vianney-musique.com" target="_blank"><p class="badge rounded-pill bg-secondary">Vianney</p></a>
+                <iframe scrolling="no" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=classic&autoplay=false&playlist=true&color=EF5466&layout=&size=medium&type=tracks&id=561251392&app_id=1"></iframe>
             </div>
             <div class="blocTexteBio col">
                 <p>
@@ -99,25 +100,25 @@
                 <div class="contenuArtistes d-flex flex-wrap justify-content-evenly">
                     <!-- ARTISTE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
-                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favArtistes" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/acdc-high-voltage.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">AC/DC</p></a>
                     </div>
                     <!-- ARTISTE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
-                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favArtistes" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/nirvana-nevermind.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">Nirvana</p></a>
                     </div>
                     <!-- ARTISTE 3 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
-                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favArtistes" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/aznavour-la-boheme.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">C. Aznavour</p></a>
                     </div>
                     <!-- ARTISTE 4 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
-                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favArtistes" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/eminem-the-eminem-show.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">Eminem</p></a>
                     </div>
@@ -130,14 +131,14 @@
                 <div class="contenuTitres d-flex flex-wrap justify-content-evenly">
                     <!--TITRE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
-                        <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favTitres" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/noir-desir-tostaky.jpg" alt="Image-Titre">
                         <a href="#"><span class="badge rounded-pill bg-light text-dark">Noir Désir</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Tostaky</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
-                        <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
+                        <span class="favTitres" data-bs-toggle="tooltip" data-bs-placement="top" title="Enlever des favoris"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/m-jackson_off-the-wall.jpg" alt="Image-Titre">
                         <a href="#"><span class="badge rounded-pill bg-light text-dark">M. Jackson</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Don't stop ...</span></a>
